--- a/admin/config.json
+++ b/admin/config.json
@@ -1,7 +1,7 @@
 {
     "installer": {
-        "username": "admin",
-        "password": "teste12"
+        "username": "cmencu",
+        "password": "@121AZX99ddcc917@"
     },
     "settings": {
         "name": "devShort shortlink service",
